--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>Cameron Pittman: Portfolio</title>
     <link rel="dns-prefetch" href="other.hostname.com">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet" meta="print">
+    <link href="css/print.css" rel="stylesheet" media="print">
     <script async src="http://www.google-analytics.com/analytics.js" ></script>
     <script async src="js/perfmatters.js"></script>
   </head>
-
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
