--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <link rel=dns-prefetch href=other.hostname.com>
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/style.css rel=stylesheet media="nomobile">
-<style type="text/css">@media only screen and (max-width: 480px) {
-  body { font-size: 12px;}
-  header p { padding-left: 4.5em;}</style>>
+<style type="text/css">body { font-size: 12px;}header p { padding-left: 4.5em;}</style>
 <script async src=http://www.google-analytics.com/analytics.js></script>
 <script>function logCRP(){var c=window.performance.timing,d=c.domContentLoadedEventStart-c.domLoading,a=c.domComplete-c.domLoading;var b=document.getElementById("crp-stats");b.textContent="DCL: "+d+"ms, onload: "+a+"ms"}window.addEventListener("load",function(a){logCRP()});</script>
 </head>
