--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <title>Cameron Pittman: Portfolio</title>
 <link rel=dns-prefetch href=other.hostname.com>
 <link href=css/print.css rel=stylesheet media="print">
-<link href=css/style.css rel=stylesheet media="nomobile">
-<style type="text/css">body { font-size: 12px;}header p { padding-left: 4.5em;}</style>
+<link href=css/mobile.css rel=stylesheet media="max-width: 480px">
+<link href=css/style.css rel=stylesheet>
 <script async src=http://www.google-analytics.com/analytics.js></script>
 <script>function logCRP(){var c=window.performance.timing,d=c.domContentLoadedEventStart-c.domLoading,a=c.domComplete-c.domLoading;var b=document.getElementById("crp-stats");b.textContent="DCL: "+d+"ms, onload: "+a+"ms"}window.addEventListener("load",function(a){logCRP()});</script>
 </head>
