--- a/project-mobile.html
+++ b/project-mobile.html
@@ -6,12 +6,11 @@
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <title>Cameron Pitman: Portfolio</title>
-<link href=css/print.css rel=stylesheet media=print>
+<link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
 <link href=css/style.css rel=stylesheet>
 <script async src=http://www.google-analytics.com/analytics.js></script>
 <script>function logCRP(){var h=window.performance.timing,g=h.domContentLoadedEventStart-h.domLoading,f=h.domComplete-h.domLoading;var e=document.getElementById("crp-stats");e.textContent="DCL: "+g+"ms, onload: "+f+"ms"}window.addEventListener("load",function(b){logCRP()});</script>
-<script src=http://www.google-analytics.com/analytics.js></script>
 <script async src=js/perfmatters.js></script>
 </head>
 <body>
