--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <title>Cameron Pittman: Portfolio</title>
-<link rel=dns-prefetch href=https://google-analytics.com/analytics.js>
+<!--<link rel=dns-prefetch href=https://google-analytics.com/analytics.js>-->
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
 <link href=css/style.css rel=stylesheet>
