--- a/project-2048.html
+++ b/project-2048.html
@@ -5,6 +5,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
+<!--<link rel=dns-prefetch href=https://google-analytics.com/analytics.js>-->
 <title>Cameron Pittman: Portfolio</title>
 <link href=css/style.css rel=stylesheet>
 <link href=css/print.css rel=stylesheet media="print">
