--- a/project-mobile.html
+++ b/project-mobile.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
-<!--<link rel=dns-prefetch href=https://google-analytics.com/analytics.js>-->
+<link rel=dns-prefetch href=//google-analytics.com/>
 <title>Cameron Pitman: Portfolio</title>
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
