--- a/project-2048.html
+++ b/project-2048.html
@@ -6,6 +6,8 @@
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <link rel=dns-prefetch href=//google-analytics.com/>
+<link rel=dns-prefetch href=//avatars1.githubusercontent.com/u/>
+<link rel=dns-prefetch href=//avatars3.githubusercontent.com/u/>
 <title>Cameron Pittman: Portfolio</title>
 <link href=css/style.css rel=stylesheet>
 <link href=css/print.css rel=stylesheet media="print">
