frontend-mobile/Feature: Minimise

--- a/project-mobile.html
+++ b/project-mobile.html
@@ -6,8 +6,8 @@
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <link rel=dns-prefetch href=//google-analytics.com/>
-<link rel=dns-prefetch href=//avatars1.githubusercontent.com/>
-<link rel=dns-prefetch href=//avatars3.githubusercontent.com/>
+<!--<link rel=prefetch href=//avatars1.githubusercontent.com/>
+<link rel=prefetch href=//avatars3.githubusercontent.com/>-->
 <title>Cameron Pitman: Portfolio</title>
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
