--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name=author content=" FILL ME IN ">
 <title>Cameron Pittman: Portfolio</title>
 <link rel=dns-prefetch href=//google-analytics.com/>
-<link rel=dns-prefetch href=//avatars1.githubusercontent.com/u/>
-<link rel=dns-prefetch href=//avatars3.githubusercontent.com/u/>
+<link rel=prefetch href=//avatars1.githubusercontent.com>
+<link rel=prefetch href=//avatars3.githubusercontent.com>
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
 <link href=css/style.css rel=stylesheet>
