--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang=en>
-<head Cache-Control: max-age=400>
+<head >
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <title>Cameron Pittman: Portfolio</title>
-<link rel=dns-prefetch href=//google-analytics.com/>
-<!--<link rel=prefetch href=//avatars1.githubusercontent.com>
-<link rel=prefetch href=//avatars3.githubusercontent.com>-->
+<!--<link rel=dns-prefetch href=//google-analytics.com/>-->
 <link href=css/print.css rel=stylesheet media="print">
 <link href=css/mobile.css rel=stylesheet media="max-width: 480px">
 <link href=css/style.css rel=stylesheet>
