--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name=description content=" FILL ME IN ">
 <meta name=author content=" FILL ME IN ">
 <title>Cameron Pittman: Portfolio</title>
-<!--<link href=css/print.css rel=stylesheet media="print">-->
+<link href=css/print.css rel=stylesheet media="print">
 <link href=css/style.css rel=stylesheet>
 <script async src=http://www.google-analytics.com/analytics.js></script>
 <script>function logCRP(){var c=window.performance.timing,d=c.domContentLoadedEventStart-c.domLoading,a=c.domComplete-c.domLoading;var b=document.getElementById("crp-stats");b.textContent="DCL: "+d+"ms, onload: "+a+"ms"}window.addEventListener("load",function(a){logCRP()});</script>
@@ -39,7 +39,7 @@
 <p>Making mobile apps isn't so hard after all.</p>
 </li>
 <li>
-<img style=width:100px src=views/images/pizzeria2.jpg>
+<img class=fix src=views/images/pizzeria2.jpg>
 <a href=views/pizza.html>Cam's Pizzeria</a>
 <p>Who wants a performant pizza?</p>
 </li>
