--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
 <p>&copy; Web Performance 2014 <span id=crp-stats></span></p>
 </footer>
 </div>
+<script>
+(function(w,g){w['GoogleAnalyticsObject']=g;
+w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
+ga('create', 'UA-XXXX-Y');
+ ga('send', 'pageview');
+ </script>
 </body>
 </html>
